// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormErrors (with login form) renders a snapshot properly 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "66r29g",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "66r29g",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <FormErrors
    formRules={
      Array [
        Object {
          "field": "email",
          "id": 1,
          "name": "Email is required.",
          "valid": false,
        },
        Object {
          "field": "password",
          "id": 2,
          "name": "Password is required.",
          "valid": false,
        },
      ]
    }
    formType="Login"
  />
</Router>
`;

exports[`FormErrors (with register form) renders a snapshot properly 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "wbryi5",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "wbryi5",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <FormErrors
    formRules={
      Array [
        Object {
          "field": "username",
          "id": 1,
          "name": "Username must be greater than 5 characters.",
          "valid": false,
        },
        Object {
          "field": "email",
          "id": 2,
          "name": "Email must be greater than 5 characters.",
          "valid": false,
        },
        Object {
          "field": "email",
          "id": 3,
          "name": "Email must be a valid email address.",
          "valid": false,
        },
        Object {
          "field": "password",
          "id": 4,
          "name": "Password must be greater than 10 characters.",
          "valid": false,
        },
      ]
    }
    formType="Register"
  />
</Router>
`;
